--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="logout"
     tools:context="com.example.login_register.MainActivity">
 
- <include
-     android:id="@+id/app_bar"
-     layout="@layout/app_bar"/>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -17,5 +14,16 @@
         android:layout_centerInParent="true"
         android:layout_marginBottom="100dp"
         android:text="Welcome to Dashboard" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="29dp"
+        android:background="@color/green"
+        android:text="Button" />
 
 </RelativeLayout>
