--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,24 +6,47 @@
     android:layout_height="match_parent"
     tools:context="com.example.login_register.MainActivity">
 
+<View
+    android:layout_width="match_parent"
+    android:layout_height="3dp"
+    android:background="@color/green"></View>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="100dp"
-        android:text="Welcome to Dashboard" />
+ <com.google.android.material.tabs.TabLayout
+     android:id="@+id/tabLayout"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     app:tabPaddingTop="15dp"
+     app:tabPaddingBottom="8dp"
+     android:background="@color/teal_200"
+     app:tabIndicatorHeight="3dp"
+     app:tabMode="fixed"
+     ></com.google.android.material.tabs.TabLayout>
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/tabpager"
+        android:layout_width="410dp"
+        android:layout_height="680dp"
+
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="29dp"
-        android:background="@color/green"
-        android:text="Button" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="51dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+      >
+
+<!--        <Button-->
+<!--            android:id="@+id/button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            -->
+<!--            android:background="@color/green"-->
+<!--            android:text="Button" -->
+<!--            />-->
+    </androidx.viewpager2.widget.ViewPager2>
 
 </RelativeLayout>
