--- a/app/src/main/res/layout/activity_find2.xml
+++ b/app/src/main/res/layout/activity_find2.xml
@@ -11,6 +11,8 @@
         android:id="@+id/find_friends_recycle_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-         />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="0dp" />
 
 </RelativeLayout>
