--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -3,17 +3,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Model.ContactsFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contacts Fragment"
-        android:layout_centerInParent="true"
-        android:textSize="10sp"
-        android:textStyle="bold"
-        android:layout_centerHorizontal="true"
-        />
-
-</RelativeLayout>
+    tools:context=".Model.ContactsFragment"/>
