--- a/app/src/main/res/layout/user_display_layout.xml
+++ b/app/src/main/res/layout/user_display_layout.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,6 +22,11 @@
         android:text="Name"
         android:textStyle="bold"
         android:textSize="30dp"></TextView>
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="match_parent"        android:layout_height="197dp"
+        tools:srcCompat="@drawable/dog" />
 
     <Button
         android:id="@+id/add_button"
