--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/teal_200"
+        android:background="#FBAE94 "
         app:tabIndicatorHeight="3dp"
         app:tabMode="fixed"
         app:tabPaddingBottom="8dp"
