--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -8,14 +8,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/Recycle_contacts"
-        android:layout_width="wrap_content"
-        android:layout_height="523dp"
+        android:layout_width="397dp"
+        android:layout_height="612dp"
+
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="-1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="0dp">
+        android:layout_marginBottom="12dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
