--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -15,6 +15,7 @@
             android:id="@+id/Recycle_chats"
             android:layout_width="match_parent"
             android:layout_height="521dp"
+            android:background="@drawable/background_left"
 
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
