--- a/app/src/main/res/layout/account_bar.xml
+++ b/app/src/main/res/layout/account_bar.xml
@@ -3,22 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="4dp">
+    android:background="@drawable/vie_bg"
+    app:cardCornerRadius="30dp">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="80dp"
         android:layout_margin="4dp">
-        <ImageView
+
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/URL_account"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="62dp"
+            android:layout_height="55dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="15dp"
             android:padding="2dp" />
+
         <TextView
             android:id="@+id/Name_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/URL_account"
+            android:fontFamily="sans-serif-smallcaps"
             android:text="Line 1"
             android:textColor="@android:color/black"
             android:textSize="20sp"
