--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,26 @@
     android:layout_height="match_parent"
     tools:context="com.example.login_register.MainActivity">
 
-<View
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="336dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="18dp"
+        android:clickable="true"
+        app:backgroundTint="#E75564"
+        app:srcCompat="@drawable/ic_add"
+        android:tint="@color/white"
+
+
+        />
+
+    <View
     android:layout_width="match_parent"
     android:layout_height="3dp"
     android:background="@color/green"></View>
@@ -19,33 +38,77 @@
         app:tabIndicatorHeight="3dp"
         app:tabMode="fixed"
         app:tabPaddingBottom="8dp"
-        app:tabPaddingTop="15dp"></com.google.android.material.tabs.TabLayout>
+        app:tabPaddingTop="15dp"
+        ></com.google.android.material.tabs.TabLayout
+        >
 
 
     <androidx.viewpager2.widget.ViewPager2
+        android:background="#fffff1"
         android:id="@+id/tabpager"
-        android:layout_width="410dp"
-        android:layout_height="680dp"
+        android:layout_width="match_parent"
+        android:layout_height="659dp"
 
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="51dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="69dp"
         android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp"
-      >
+        android:layout_marginBottom="3dp">
 
-<!--        <Button-->
-<!--            android:id="@+id/button"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            -->
-<!--            android:background="@color/green"-->
-<!--            android:text="Button" -->
-<!--            />-->
     </androidx.viewpager2.widget.ViewPager2>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/floatingActionButton8"
+        android:layout_alignStart="@+id/floatingActionButton8"
+        android:layout_alignEnd="@+id/floatingActionButton8"
+        android:layout_marginStart="3dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#D862D6  "
+        android:clickable="true"
+        android:tint="@color/white"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/ic_setting" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_but"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/floatingActionButton10"
+        android:layout_alignStart="@+id/floatingActionButton10"
+        android:layout_alignEnd="@+id/floatingActionButton10"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="13dp"
+        android:backgroundTint="#9C5DDF"
+        android:clickable="true"
+        android:tint="@color/white"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/ic_add_friend" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton_exit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/add_but"
+        android:layout_alignStart="@+id/add_but"
+        android:layout_alignEnd="@+id/add_but"
+        android:layout_marginStart="-1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="19dp"
+        android:clickable="true"
+        app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
+        android:backgroundTint="#510EFF"
+        android:tint="@color/white"
+        android:visibility="invisible"/>
+
+
 
 </RelativeLayout>
