--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,51 +4,100 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsActivity">
+    android:padding="8dp"
+    tools:context=".SettingsActivity"
+    android:background="#fffff1">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_image"
-        android:layout_width="127dp"
-        android:layout_height="134dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="143dp"
-        android:layout_marginTop="37dp"
-        android:src="@drawable/dog"
-        app:civ_border_color="#FF000000"
-        app:civ_border_width="2dp" />
-
-
-
-    <Button
-        android:id="@+id/pd_button"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"
-        android:text="Button" />
-
-    <RadioGroup
-        android:id="@+id/RadioGroup"
-        android:layout_width="269dp"
-        android:layout_height="130dp"
-        android:layout_below="@+id/profile_image"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="29dp">
-
-        <RadioButton
-            android:id="@+id/radioButton"
+        android:layout_height="wrap_content">
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Male" />
+            android:padding="8dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Profile"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold"/>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/profile_image_setting"
+                android:layout_marginTop="50dp"
+                android:src="@drawable/google"
+                android:layout_centerHorizontal="true"
+                />
 
-        <RadioButton
-            android:id="@+id/radioButton2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Female" />
-    </RadioGroup>
 
-</RelativeLayout>
+            <EditText
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:text="Name"
+                android:layout_below="@id/profile_image_setting"
+                android:layout_centerHorizontal="true"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_marginTop="15dp"
+                android:textStyle="bold"
+                android:id="@+id/Name_edit"/>
+            <EditText
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:text="Phone"
+                android:layout_below="@id/Name_edit"
+                android:layout_centerHorizontal="true"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_marginTop="15dp"
+                android:textStyle="bold"
+                android:id="@+id/phone_edit"/>
+
+            <EditText
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:text="Email"
+                android:layout_below="@id/phone_edit"
+                android:layout_centerHorizontal="true"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_marginTop="15dp"
+                android:textStyle="bold"
+                android:id="@+id/email_edit"/>
+            <RelativeLayout
+                android:id="@+id/check_sex_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/email_edit"
+                android:layout_marginTop="18sp">
+
+
+
+
+
+
+
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/check_sex_edit"
+                >
+                <Button
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:id="@+id/button_change_setting"
+                    android:text="Change"
+                    android:background="@drawable/button_bg"
+
+                    ></Button>
+            </RelativeLayout>
+
+
+
+
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+
+        </RelativeLayout>
+
