--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -7,13 +7,16 @@
 >
 
     <androidx.recyclerview.widget.RecyclerView
+        android:backgroundTint="#fffff1"
         android:id="@+id/Recycle_contacts"
-        android:layout_width="397dp"
-        android:layout_height="612dp"
-
+        android:layout_width="match_parent"
+        android:layout_height="585dp"
         android:layout_alignParentStart="true"
+
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="12dp">
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="-10dp"
+        android:background="@color/white">
 
     </androidx.recyclerview.widget.RecyclerView>
 
