--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -12,14 +12,16 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
+            android:backgroundTint="#fffff1"
             android:id="@+id/Recycle_chats"
             android:layout_width="match_parent"
-            android:layout_height="521dp"
-            android:background="@drawable/background_left"
-
+            android:layout_height="650dp"
             android:layout_alignParentStart="true"
+
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="12dp">
+            android:layout_marginStart="0dp"
+            android:layout_marginBottom="-10dp"
+            android:background="@color/white">
 
         </androidx.recyclerview.widget.RecyclerView>
 
